@@ -1,2 +1,2 @@
-!function(e){function n(r){if(o[r])return o[r].exports;var t=o[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,n),t.l=!0,t.exports}var o={};n.m=e,n.c=o,n.i=function(e){return e},n.d=function(e,o,r){n.o(e,o)||Object.defineProperty(e,o,{configurable:!1,enumerable:!0,get:r})},n.n=function(e){var o=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(o,"a",o),o},n.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},n.p="",n(n.s=2)}([function(e,n){jQuery(document).ready(function(e){function n(e){o[e]&&(o[r]&&(o[r].$el.removeClass("current"),o[r].$section.removeClass("current")),o[e].$el.addClass("current"),o[e].$section.addClass("current"),r=e)}var o=[],r="",t=0;if(e("ul.subsubsub a").each(function(){t++;var r=e(this),c=r.data("section");o[c]={$el:r,$section:e("#app-settings-"+c)},r.click(function(e){n(c)})}),t){var c=window.location.hash;c=c?c.substr(1):Object.keys(o)[0],n(c)}})},function(e,n){jQuery(document).ready(function(e){function n(){"yes"==u.val()?s.show():s.hide()}var o,r,t,c=e(".custom_color_row"),i=e(".preset_samples");e('select[name="color_set"]').change(function(){var n=e(this).val();if(0==n)c.show(),i.hide();else{c.hide(),i.show();for(t in app_i10n.classes)if(app_i10n.classes.hasOwnProperty(t)){for(o=[],r=1;r<=3;r++)o[r]=app_i10n.presets[t][r];i.find("a."+t).css("background-color","#"+o[n])}}});var a=e(".colorpicker_input");a.each(function(){var n=this.id;e("#"+n).ColorPicker({onSubmit:function(n,o,r,t){e(t).val(o),e(t).ColorPickerHide()},onBeforeShow:function(){e(this).ColorPickerSetColor(this.value)},onChange:function(o,r,t){var c=e("#"+n);c.val(r),c.parent().find("a.pickcolor").css("background-color","#"+r)}}).bind("keyup",function(){e(this).ColorPickerSetColor(this.value)})}),a.keyup(function(){var n=e(this).val();n=n.replace(/[^a-fA-F0-9]/,""),3!==n.length&&6!==n.length||e(this).parent().find("a.pickcolor").css("background-color","#"+n)});var s=e(".api_detail");console.log(s);var u=e('select[name="login_required"]');n(),u.change(function(){n()}),jQuery(document).ready(function(e){e('select[name="payment_required"]').change(function(){"yes"==e('select[name="payment_required"]').val()?e(".payment_row").show():e(".payment_row").hide()})})})},function(e,n,o){o(0),e.exports=o(1)}]);
+!function(e){function n(o){if(r[o])return r[o].exports;var t=r[o]={i:o,l:!1,exports:{}};return e[o].call(t.exports,t,t.exports,n),t.l=!0,t.exports}var r={};n.m=e,n.c=r,n.i=function(e){return e},n.d=function(e,r,o){n.o(e,r)||Object.defineProperty(e,r,{configurable:!1,enumerable:!0,get:o})},n.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(r,"a",r),r},n.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},n.p="",n(n.s=2)}([function(e,n){jQuery(document).ready(function(e){function n(e){r[e]&&(r[o]&&(r[o].$el.removeClass("current"),r[o].$section.removeClass("current")),r[e].$el.addClass("current"),r[e].$section.addClass("current"),o=e)}var r=[],o="",t=0;if(e("ul.subsubsub a").each(function(){t++;var o=e(this),i=o.data("section");r[i]={$el:o,$section:e("#app-settings-"+i)},o.click(function(e){n(i)})}),t){var i=window.location.hash;i=i?i.substr(1):Object.keys(r)[0],n(i)}})},function(e,n){jQuery(document).ready(function(e){function n(){"yes"==u.val()?s.show():s.hide()}var r,o,t,i=e(".custom_color_row"),c=e(".preset_samples");e('select[name="color_set"]').change(function(){var n=e(this).val();if(0==n)i.show(),c.hide();else{i.hide(),c.show();for(t in app_i10n.classes)if(app_i10n.classes.hasOwnProperty(t)){for(r=[],o=1;o<=3;o++)r[o]=app_i10n.presets[t][o];c.find("a."+t).css("background-color","#"+r[n])}}});var a=e(".colorpicker_input");a.each(function(){var n=this.id;e("#"+n).ColorPicker({onSubmit:function(n,r,o,t){e(t).val(r),e(t).ColorPickerHide()},onBeforeShow:function(){e(this).ColorPickerSetColor(this.value)},onChange:function(r,o,t){var i=e("#"+n);i.val(o),i.parent().find("a.pickcolor").css("background-color","#"+o)}}).bind("keyup",function(){e(this).ColorPickerSetColor(this.value)})}),a.keyup(function(){var n=e(this).val();n=n.replace(/[^a-fA-F0-9]/,""),3!==n.length&&6!==n.length||e(this).parent().find("a.pickcolor").css("background-color","#"+n)});var s=e(".api_detail");console.log(s);var u=e('select[name="login_required"]');n(),u.change(function(){n()}),jQuery(document).ready(function(e){e('select[name="payment_required"]').change(function(){"yes"==e('select[name="payment_required"]').val()?e(".payment_row").show():e(".payment_row").hide()})}),jQuery("#app-settings-section-new-worker form.add-new-service-provider").on("submit",function(){var e=jQuery(this);if(null==jQuery("#services_provided",e).val())return alert(app_i10n.messages.select_service_provider),!1})})},function(e,n,r){r(0),e.exports=r(1)}]);
 //# sourceMappingURL=admin-settings.js.map
